# fractals

./: .gitignore  Dockerfile  index.html  package-lock.json  package.json
docs/: README.md
perturbation/: Cargo.toml
perturbation/src/: lib.rs
src/: fractals.ts  input.ts  main.ts  perturbation.ts  viewport.ts
src/gpu/: device.ts  renderer.ts
src/shaders/: blit.wgsl  probe.wgsl
src/shaders/drivers/: df.wgsl  f32.wgsl  pert.wgsl
src/shaders/fractals/: burningship.wgsl  mandelbrot.wgsl  multibrot.wgsl
src/shaders/lib/: bindings.wgsl  color.wgsl  complex.wgsl  df.wgsl
